Fixed an issue where the heights weren't calculated on load if any images where present. Now the heights are recalculated after an image loads.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			width: 27.33333%;
 			float: left;
 		}
+		img{
+			max-width: 100%;
+		}
 
 	</style>
 	
@@ -97,12 +100,49 @@
 		<li>
 			<div class="text">
 				<h2>About example 2</h2>
-				<p>This example uses wraps the main text in a wrapper div, followed by an &lt;a&gt; element. The plugin works it's magic on the wrapper div, which results in the links neatly matching up vertically.</p>
+				<p>This example wraps the main text in a wrapper div, followed by an &lt;a&gt; element. The plugin works it's magic on the wrapper div, which results in the links neatly matching up vertically.</p>
 				
 			</div>
 			<p><a href="#">Don't read more</a></p>
 		</li>
 	</ul>
+	
+	
+	
+	<ul class="blocks test-3">
+		<li>
+			<div class="text">
+				<h2>Why this plugin?</h2>
+				<p>
+					<img src="http://www.placehold.it/300x400" />
+				</p>
+			</div>
+			<p><a href="#">Don't read more</a></p>
+		</li>
+
+		
+
+		<li>
+			<div class="text">	
+				<h2>About example 1 (look up)</h2>
+				<p>
+					<img src="http://www.placehold.it/300x600" />
+				</p>
+			</div>
+			<p><a href="#">Don't read more</a></p>
+		</li>
+
+		<li>
+			<div class="text">
+				<p>
+					<img src="http://www.placehold.it/500x300" />
+				</p>
+			</div>
+			<p><a href="#">Don't read more</a></p>
+		</li>
+	</ul>
+	
+	
 	
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -115,6 +155,7 @@
 		});
 
 		$('.test-2 .text').equalHeightColumns();
+		$('.test-3 .text').equalHeightColumns();
 	</script>
 
   
